<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listVehiclePolicyFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:paddingStart="@dimen/layout_padding"
    android:paddingTop="@dimen/layout_padding"
    android:paddingEnd="@dimen/layout_padding"
    tools:context=".ui.fragment.ListVehiclePolicyFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageButton
            android:id="@+id/iv_back_vpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/back_button_padding"
            android:src="@drawable/arrow_back"
            android:tooltipText="Back" />

        <ImageButton
            android:id="@+id/iv_addPolicyIcon_vpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/back_button_padding"
            android:src="@drawable/add_icon"
            android:tooltipText="Add Policy" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titleCompanyName_vpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibri_bold"
            android:paddingStart="@dimen/title_Padding"
            android:paddingEnd="@dimen/title_Padding"
            android:paddingBottom="12dp"
            android:text="Lic Insurance"
            android:textColor="@color/title_color"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_vpl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:visibility="visible"
            tools:listitem="@layout/item_list_vehicle_policy" />

    </LinearLayout>
</LinearLayout>