<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    android:background="@color/cardView_background"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/iv_options_vpl_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="-8dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="4dp"
                android:src="@drawable/more_options_vert"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/tv_policyNumber_vpl_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/iv_options_vpl_item"
                android:ellipsize="end"
                android:fontFamily="@font/calibri_bold"
                android:maxLines="1"
                android:textColor="@color/textView_color"
                android:text="VehiclePolicyNumber 12345"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_vehicleNumber_vpl_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_policyNumber_vpl_item"
                android:layout_marginTop="4dp"
                android:textColor="@color/textView_color"
                android:fontFamily="@font/calibri_bold"
                android:text="VehicleName GJ"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>