<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_edit_vpl"
        android:title="Edit" />
    <item
        android:id="@+id/menu_delete_vpl"
        android:title="Delete" />

</menu>