<resources>
    <string name="app_name">Vehicle Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="SnackBar_PolicySaved">Policy Saved Successfully</string>
    <string name="SnackBar_PolicyFieldEmpty">Something went wrong!!</string>
    <string name="SnackBar_PolicyHigherPurchaseDate">Please enter correct expiry date!!</string>
    <string name="SnackBar_PolicyUpdate">Policy Updated Successfully</string>
    <string name="SnackBar_PolicyDelete">Policy Deleted Successfully</string>
    <string name="CopyTextToast">Copied</string>
</resources>