<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:paddingStart="@dimen/layout_padding"
    android:paddingTop="@dimen/layout_padding"
    android:paddingEnd="@dimen/layout_padding"
    android:paddingBottom="0dp"
    tools:context=".ui.fragment.SearchVehiclePolicyCompanyFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageButton
            android:id="@+id/iv_back_vp_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/back_button_padding"
            android:src="@drawable/arrow_back"
            android:tooltipText="Back" />

        <EditText
            android:id="@+id/et_searchCompany_vp_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/iv_back_vp_search"
            android:background="@color/background_color"
            android:fontFamily="@font/calibri"
            android:hint="Type your provider name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/back_button_padding" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_vp_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_search_vehicle_policy_company" />

</LinearLayout>